# heartofblockchain

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/: Anchor.toml  README.md  package.json  pnpm-lock.yaml
contracts/programs/heartofblockchain/: Cargo.toml
contracts/programs/heartofblockchain/src/: lib.rs
contracts/programs/heartofblockchain/src/instructions/: create_campaign.rs  donate.rs  mod.rs
contracts/programs/heartofblockchain/src/state/: global_config.rs  mod.rs
contracts/tests/: heartofblockchain.ts
programs/heartofblockchain/: Cargo.toml
programs/heartofblockchain/src/: error.rs  lib.rs
programs/heartofblockchain/src/instructions/: create_campaign.rs  donate.rs  initialize_global_config.rs  update_global_admin.rs  withdraw.rs
programs/heartofblockchain/src/state/: campaign.rs  donor.rs  mod.rs
tests/: heartofblockchain.ts
ui/: .env.example  package-lock.json  package.json  pnpm-lock.yaml
ui/prisma/: schema.prisma
ui/prisma/migrations/20251018040208_init/: migration.sql
ui/prisma/migrations/20251018041947_add_default_values/: migration.sql
ui/src/app/: page.tsx
ui/src/app/api/: README.md
ui/src/app/api/campaigns/: route.ts
ui/src/app/api/campaigns/all/: route.ts
ui/src/app/explore/: page.tsx
ui/src/components/: campaign-card.tsx  navbar.tsx
ui/src/db/: index.ts
ui/src/idl/: heartofblockchain.json
ui/src/services/: blockchain.service.ts
ui/src/types/: heartofblockchain.ts
