[package]
name = "heartofblockchain"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "heartofblockchain"

[features]
# your existing flags
default       = []
cpi           = ["no-entrypoint"]
no-entrypoint = []
no-idl        = []
no-log-ix-name = []
idl-build     = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# new flag to re-export Anchor's init-if-needed
init-if-needed = ["anchor-lang/init-if-needed"]

[dependencies]
# enable Anchor's init_if_needed macro
anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
anchor-spl  = { version = "0.31.1", features = ["token", "associated_token"] }
